# shellpoker

./: README.md  card.py  deck.py  game.py  main.py  makefile  player.py  pyproject.toml  wins.py
.devcontainer/: Dockerfile  devcontainer.json
src/shellpoker/: card.py  card_widget.py  css.py  deck.py  game.py  inputs.py  logger.py  main.py  player.py  poker.css  simulate.py  wins.py
tests/: test_card.py  test_double_mini_game.py  test_wins.py
