[project]
name = "shellpoker"
version = "0.1.0"
description = "single player poker in your shell"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual",
    "toml"
]
[project.scripts]
shellpoker = "shellpoker.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
lint = [
    "ruff>=0.11.13",
]
